@@ -21,7 +21,6 @@
 		<li>List column defaults on views.
 		<li>Allow copy/paste of entire rows in the data editor
 		<li>Allow Server Status & Maintenance windows to be resized to allow easy reading of data
-		<li>Save size/position of property dialogues
 		<li>On populate stats/depends list views when appropriate tab is selected
 		<li>EditGrid: try to show freshly inserted row with 'serial' pk
 	</ul>
