@@ -103,6 +103,30 @@ public:
     void SetSQLFont(const wxFont &font);
     wxString GetCanonicalLanguage() const { return canonicalLanguage; }
 
+    bool Write(const wxString &key, const wxString &value) { return wxConfig::Write(key, value); }
+    bool Write(const wxString &key, long value) { return wxConfig::Write(key, value); }
+    bool Write(const wxString &key, const wxPoint &value);
+    bool Write(const wxString &key, const wxSize &value);
+    bool Write(const wxString &key, const wxSize &size, const wxPoint &point)
+        { Write(key, point); Write(key, size); return true;}
+
+    bool Read(const wxString& key, wxString* str, const wxString& defaultVal) const
+        { return wxConfig::Read(key, str, defaultVal); }
+    bool Read(const wxString& key, bool* str, bool defaultVal) const
+        { return wxConfig::Read(key, str, defaultVal); }
+    bool Read(const wxString& key, int* i, int defaultVal) const
+        { return wxConfig::Read(key, i, defaultVal); }
+    bool Read(const wxString& key, long* l, long defaultVal) const
+        { return wxConfig::Read(key, l, defaultVal); }
+    wxString Read(const wxString& key, const wxString &defaultVal) const
+        { return wxConfig::Read(key, defaultVal); }
+    long Read(const wxString& key, long defaultVal) const
+        { return wxConfig::Read(key, defaultVal); }
+    wxPoint Read(const wxString& key, const wxPoint &defaultVal) const;
+    wxSize Read(const wxString& key, const wxSize &defaultVal) const;
+
+
+
 
 private:
 
