@@ -11,7 +11,8 @@
 <ul>
     <li>V1.0.0
     <ul>
-        <li>2003-11-16 DA  - Fix file writing
+        <li>2003-11-24 AP  - remember property dialog sizes (reengineer syssettings for pos/size)
+        <li>2003-11-16 AP  - Fix file writing
         <li>2003-11-14 DP  - Allow creation/display of functions with class data types.
         <li>2003-11-11 AP  - reengineering: ctlListView
         <li>2003-11-11 AP  - Show referencing/referenced objects
